Link Dinamico de controlers

--- a/src/index.html
+++ b/src/index.html
@@ -64,22 +64,22 @@
 			<menu id="menu">
 				<div class="topcoat-list" id="menu-content">
 					<ul class="topcoat-list__container">
-						<li class="topcoat-list__item botoes-app" data-url="home.html">
+						<li class="topcoat-list__item botoes-app" data-url="home.html" data-controler='HomeController'>
 							Home
 						</li>
-						<li class="topcoat-list__item botoes-app" data-url="page1.html">
+						<li class="topcoat-list__item botoes-app" data-url="page1.html" data-controler='Page1Controller'>
 							Item 1 + SCROLL INFINITE PERFORMANCE TEST
 						</li>
-						<li class="topcoat-list__item botoes-app" data-url="page2.html">
+						<li class="topcoat-list__item botoes-app" data-url="page2.html" data-controler='Page2Controller'>
 							Item 2 + CALLBACK EVENTS
 						</li>
-						<li class="topcoat-list__item botoes-app" data-url="page3.html">
+						<li class="topcoat-list__item botoes-app" data-url="page3.html" data-controler='Page3Controller'>
 							Item 3
 						</li>
-						<li class="topcoat-list__item botoes-app" data-url="page4.html">
+						<li class="topcoat-list__item botoes-app" data-url="page4.html" data-controler='Page4Controller'>
 							Item 4
 						</li>
-						<li class="topcoat-list__item botoes-app" data-url="page5.html">
+						<li class="topcoat-list__item botoes-app" data-url="page5.html" data-controler='Page5Controller'>
 							Item 5
 						</li>
 					</ul>
