--- a/src/index.html
+++ b/src/index.html
@@ -14,42 +14,10 @@
 	<!-- Your custom style -->
 	<link rel="stylesheet" href="assets/css/style.css" />
 
-
-
-
-
-
-	<!-- JAVASCRIPT -->
-	<!-- CONTROLLERS -->
-	<script src="assets/js/controllers/AppController.js"></script>
-	<script src="assets/js/controllers/HomeController.js"></script>
-	<!-- CUSTOM YOUR CONTROLLERS-->
-	<script src="assets/js/controllers/Page1Controller.js"></script>
-	<script src="assets/js/controllers/Page2Controller.js"></script>
-	<script src="assets/js/controllers/Page3Controller.js"></script>
-	<script src="assets/js/controllers/Page4Controller.js"></script>
-	<script src="assets/js/controllers/Page5Controller.js"></script>
-
-	<!-- LIBRARIES (load with bower) -->
-	<script src="vendor/zepto/zepto.min.js"></script>
-	<script src="vendor/zepto/zepto-touch.js"></script>
-	<script src="vendor/fastclick/lib/fastclick.js"></script>
-	<!-- SCROLL (load with bower) -->
-	<script src="vendor/overthrow/src/overthrow-detect.js"></script>
-	<script src="vendor/overthrow/src/overthrow-polyfill.js"></script>
-	<script src="vendor/overthrow/src/overthrow-toss.js"></script>
-	<script src="vendor/overthrow/src/overthrow-init.js"></script>
-	<!-- SNAPJS -->
-	<script src="vendor/snapjs/snap.min.js"></script>
-
-
-	<!-- FASTGAP -->
-	<script src="assets/js/History.js"></script>
-	<script src="assets/js/FG.js"></script>
-	<script src="assets/js/Navigator.js"></script>
-	<script src="assets/js/Transition.js"></script>
-	<script src="assets/js/PageLoad.js"></script>
-	<script src="assets/js/index.js"></script>
+	<!-- Javascripts -->
+	<script src="../dist/js/fastgap.controllers.js"></script>
+	<script src="../dist/js/fastgap.libs.js"></script>
+	<script src="../dist/js/fastgap.core.js"></script>
 
 	<!-- VIEWPORT -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
