--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,10 @@
 	<link rel="stylesheet" href="assets/css/style.css" />
 
 	<!-- Javascripts -->
-	<script src="../dist/js/fastgap.controllers.js"></script>
-	<script src="../dist/js/fastgap.libs.js"></script>
-	<script src="../dist/js/fastgap.core.js"></script>
+	<!--<script src="../dist/js/fastgap.controllers.js"></script>-->
+	<!--<script src="../dist/js/fastgap.libs.js"></script>-->
+	<!--<script src="../dist/js/fastgap.core.js"></script>-->
+	<script src="../dist/js/fastgap.js"></script>
 
 	<!-- VIEWPORT -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
