--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,7 @@
 	<!-- Snap.js -->
 	<link rel="stylesheet" href="vendor/snapjs/snap.css" />
 	<!-- Fastgap base style -->
-	<link rel="stylesheet" href="assets/css/fastgap.css" />
+	<link rel="stylesheet" href="../dist/css/fastgap.min.css" />
 	<!-- Your custom style -->
 	<link rel="stylesheet" href="assets/css/style.css" />
 
