--- a/demo/index.html
+++ b/demo/index.html
@@ -6,9 +6,9 @@
 
 	<!-- Styles -->
 	<!-- Topcoat mobile -->
-	<link rel="stylesheet" href="vendor/topcoat/css/topcoat-mobile-light.min.css" />
+	<link rel="stylesheet" href="../bower_components/topcoat/css/topcoat-mobile-light.min.css" />
 	<!-- Snap.js -->
-	<link rel="stylesheet" href="vendor/snapjs/snap.css" />
+	<link rel="stylesheet" href="../bower_components/snapjs/snap.css" />
 	<!-- Fastgap base style -->
 	<link rel="stylesheet" href="../dist/css/fastgap.min.css" />
 	<!-- Your custom style -->
