--- a/demo/index.html
+++ b/demo/index.html
@@ -18,7 +18,7 @@
 	<!--<script src="../dist/js/fastgap.controllers.js"></script>-->
 	<!--<script src="../dist/js/fastgap.libs.js"></script>-->
 	<!--<script src="../dist/js/fastgap.core.js"></script>-->
-	<script src="../dist/js/fastgap.min.js"></script>
+	<script src="assets/js/fastgap.min.js"></script>
 
 	<!-- VIEWPORT -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
